Fix z-index on splash input

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1385,6 +1385,7 @@ li.subtab.disabled a
 .splash-beta-request > div
   max-width 100%
   min-width 342px
+  z-index 100
 
 .splash-beta-request form
   width 342px
